--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 <body>
     <h1>Courtney Christine Gainor</h1>
 
-    <img src="http://lorempixel.com/output/cats-q-c-640-480-8.jpg" alt="Your Image" />
+    <img src="https://avatars3.githubusercontent.com/u/38048885?s=460&v=4" alt="Courtney UCSB Graduation Image" />
     <hr>
 
     <p>I graduated from UC Santa Barbara</p>
     <p></p>
 
     <ul>
-        <li><strong>Email: </strong><a href="#">ccgainor@yahoo.com</a></li>
-        <li><strong>LinkedIn: </strong></li>
-        <li><strong>Github: </strong></li>
+        <li><strong>Email: </strong><a href="#" target="_blank">ccgainor@yahoo.com</a></li>
+        <li><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/courtney-g-57512091/" target="_blank">Courtney Gainor</a></li>
+        <li><strong>Github: </strong><a href="https://github.com/cgainor" target="_blank">cgainor</a></li>
         <li><strong>Instagram: </strong><a href="https://www.instagram.com/courtgainor8/" target="_blank">courtgainor8</a></li>
         <li><strong>Facebook: </strong></li>
     </ul>
@@ -25,24 +25,24 @@
     <!-- A table that will contain three columns and some data on your favorite movies, songs, books, or activities -->
     <table>
         <tr>
-            <th>Books</th>
-            <th>Movies</th>
-            <th>Games</th>
+            <th>Activity</th>
+            <th>Equipment</th>
+            <th>Position</th>
         </tr>
         <tr>
-            <td>Book 1</td>
-            <td>Book 2</td>
-            <td>Book 3</td>
+            <td>Photography</td>
+            <td>Camera</td>
+            <td>Photographer</td>
         </tr>
         <tr>
-            <td>Movie 1</td>
-            <td>Movie 2</td>
-            <td>Movie 3</td>
+            <td>School</td>
+            <td>Laptop</td>
+            <td>Data Science Student</td>
         </tr>
         <tr>
-            <td>Game 1</td>
-            <td>Game 2</td>
-            <td>Game 3</td>
+            <td>Math</td>
+            <td>Pencil & Paper</td>
+            <td>Tutor</td>
             </tr>
     </table>
     <!-- Look into how one might go about linking one custom-made HTML page to another. Once you have found out how, try creating a link from your bio page you have just created to one of the pages you created last class. -->
