--- a/index.html
+++ b/index.html
@@ -8,21 +8,26 @@
 <body>
     <h1>Courtney Christine Gainor</h1>
 
-    <img src="https://avatars3.githubusercontent.com/u/38048885?s=460&v=4" alt="Courtney UCSB Graduation Image" />
+    <img src="/Users/courtneygainor/Desktop/Data Science Bootcamp/Classwork/4.2.19/01-Stu_HTMLBio/Unsolved/GradPic.jpg" width=400 alt="Courtney UCSB Graduation Image" />
     <hr>
 
-    <p>I graduated from UC Santa Barbara</p>
-    <p></p>
+    <p>Courtney graduated from UC Santa Barbara in June 2018 with a degree in Mathematics and a minor in Math Education. 
+        During her time there, she played defense for the UCSB Women's Lacrosse Team, in addition to taking on the role of the team's Treasurer for several years. 
+        She also began as a writer, then a question master, and eventually worked her way up to the highest position of coordinator of the university sponsored health education website sexinfoonline.com, 
+        an internationally reaching site dedicated to spreading accurate information about the human body, healthy relationships, and safe sexual practices.
+    </p>
+    <p>Courtney is currently continuing her role as a student through her enrollment in the Data Science and Visualization Bootcamp via UC San Diego's Extension Program. 
+        She is studying to pursue a career in the data science field, and appreciates the challenging hands on practice that is encouraged during the course.
+    </p>
 
     <ul>
         <li><strong>Email: </strong><a href="#" target="_blank">ccgainor@yahoo.com</a></li>
         <li><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/courtney-g-57512091/" target="_blank">Courtney Gainor</a></li>
         <li><strong>Github: </strong><a href="https://github.com/cgainor" target="_blank">cgainor</a></li>
         <li><strong>Instagram: </strong><a href="https://www.instagram.com/courtgainor8/" target="_blank">courtgainor8</a></li>
-        <li><strong>Facebook: </strong></li>
+        <li><strong>Facebook: </strong><a href="https://www.facebook.com/Shortney8" target="_blank">Courtney Gainor</a></li>
     </ul>
 
-    <!-- A table that will contain three columns and some data on your favorite movies, songs, books, or activities -->
     <table>
         <tr>
             <th>Activity</th>
