--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Courtney Christine Gainor</h1>
 
-    <img src="GradPic.jpg" width=400 alt="Courtney UCSB Graduation Image"/>
+    <img src="/GradPic.jpg" width=400 alt="Courtney UCSB Graduation Image"/>
     <hr>
 
     <p>Courtney graduated from UC Santa Barbara in June 2018 with a degree in Mathematics and a minor in Math Education. 
