--- a/index.html
+++ b/index.html
@@ -1,56 +1,88 @@
-<!DOCTYPE html>
-<html lang="en-us">
+<!doctype html>
+<html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap Stylesheet -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Bootswatch Stylesheet -->
+    <link rel="stylesheet" href="static/bootstyle.css">
+    <!-- My Stylesheet -->
+    <link rel="stylesheet" href="static/style.css">
+    <!-- Title -->
+    <title>Courtney Gainor</title>
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico" />
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>Courtney Christine Gainor</h1>
+    <!-- Create Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#e5ddd2;">
 
-    <img src="GradPic.jpg" width=400 alt="Courtney UCSB Graduation Image"/>
-    <hr>
+        <!-- Header (Home Link) is Home Button -->
+        <a class="navbar-brand" href="index.html"><img id="logo" alt="Logo" src="images/logo.png" width="200"
+                height="60"></a>
 
-    <p>Courtney graduated from UC Santa Barbara in June 2018 with a degree in Mathematics and a minor in Math Education. 
-        During her time there, she played defense for the UCSB Women's Lacrosse Team, in addition to taking on the role of the team's Treasurer for several years. 
-        She also began as a writer, then a question master, and eventually worked her way up to the highest position of coordinator of the university sponsored health education website sexinfoonline.com, 
-        an internationally reaching site dedicated to spreading accurate information about the human body, healthy relationships, and safe sexual practices.
-    </p>
-    <p>Courtney is currently continuing her role as a student through her enrollment in the Data Science and Visualization Bootcamp via UC San Diego's Extension Program. 
-        She is studying to pursue a career in the data science field, and appreciates the challenging hands on practice that is encouraged during the course.
-    </p>
+        <!-- Make it so navbar collapses to icon dropdown when window size decreased -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <ul>
-        <li><strong>Email: </strong><a href="#" target="_blank">ccgainor@yahoo.com</a></li>
-        <li><strong>LinkedIn: </strong><a href="https://www.linkedin.com/in/courtney-g-57512091/" target="_blank">Courtney Gainor</a></li>
-        <li><strong>Github: </strong><a href="https://github.com/cgainor" target="_blank">cgainor</a></li>
-        <li><strong>Instagram: </strong><a href="https://www.instagram.com/courtgainor8/" target="_blank">courtgainor8</a></li>
-        <li><strong>Facebook: </strong><a href="https://www.facebook.com/Shortney8" target="_blank">Courtney Gainor</a></li>
-    </ul>
+        <!-- Stuff in collapsible navbar -->
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <!-- Menu items -->
+            <div class="navbar-nav ml-auto nav-item dropdown">
+                <a class="nav-item nav-link" href="about_page.html">About</a>
+                <a class="nav-item nav-link" href="projects_page.html">Projects</a>
+                <a class="nav-item nav-link" href="contact_page.html">Contact</a>
+                <a class="nav-item nav-link" href="resume_page.html">Résumé</a>
+            </div>
+        </div>
+    </nav>
+    <!-- End of Navbar -->
 
-    <table>
-        <tr>
-            <th>Activity</th>
-            <th>Equipment</th>
-            <th>Position</th>
-        </tr>
-        <tr>
-            <td>Photography</td>
-            <td>Camera</td>
-            <td>Photographer</td>
-        </tr>
-        <tr>
-            <td>School</td>
-            <td>Laptop</td>
-            <td>Data Science Student</td>
-        </tr>
-        <tr>
-            <td>Math</td>
-            <td>Pencil & Paper</td>
-            <td>Tutor</td>
-            </tr>
-    </table>
-    <!-- Look into how one might go about linking one custom-made HTML page to another. Once you have found out how, try creating a link from your bio page you have just created to one of the pages you created last class. -->
+    <!-- Make Home Section -->
+    <div id="triangle-back">
+        <div style="text-align:center" class="jumbotron" style="margin-bottom: 0px">
+            <h1 class="display-3">Courtney Gainor</h1>
+            <p class="lead">My Tagline My Tagline My Tagline My Tagline</p>
+            <hr class="my-4">
+            <p class="lead">
+                <a class="btn btn-primary btn-lg" href="#TabViz1" role="button"
+                    style="padding-top: 20px;padding-bottom: 20px">Welcome<br>&#8595;</a>
+            </p>
+        </div>
+    </div>
+    <br><br>
+    <!-- End of Home Section -->
+
+    <!-- Make About Section -->
+    <div id="container">
+        <div id="row justify-content-around" style="text-align: center">
+            <div id="col">
+                <img src="images/GradPic.jpg" alt="Graduation Picture" style="height: 200px;border-radius: 4px">
+            </div>
+        </div>
+    </div>
+    <h1 style="text-align: center; color:gray">About Me</h1>
+
+    <!-- End of About Section -->
+
 </body>
 
 </html>
