--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <!-- Create Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#e5ddd2;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color:#e5ddd2;">
 
         <!-- Header (Home Link) is Home Button -->
         <a class="navbar-brand" href="index.html"><img id="logo" alt="Logo" src="images/logo.png" width="200"
@@ -72,14 +72,17 @@
     <!-- End of Home Section -->
 
     <!-- Make About Section -->
-    <div id="container">
-        <div id="row justify-content-around" style="text-align: center">
-            <div id="col">
+    <div class="container">
+        <div class="row justify-content-around" style="text-align: center">
+            <div class="col">
                 <img src="images/GradPic.jpg" alt="Graduation Picture" style="height: 200px;border-radius: 4px">
+            </div>
+            <div class="col">
+                <h1 style="text-align: center; color:gray">About Me</h1>
             </div>
         </div>
     </div>
-    <h1 style="text-align: center; color:gray">About Me</h1>
+    
 
     <!-- End of About Section -->
 
