--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <!-- Create Navbar -->
-    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color:#e5ddd2;">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color:#e5ddd2;margin-top: 0">
 
         <!-- Header (Home Link) is Home Button -->
         <a class="navbar-brand" href="index.html"><img id="logo" alt="Logo" src="images/logo.png" width="200"
@@ -80,8 +80,12 @@
             <div class="col">
                 <h1 style="text-align: center; color:gray">About Me</h1>
             </div>
+            <div class="col">
+                    <h1 style="text-align: center; color:gray">Skills</h1>
+                </div>
         </div>
     </div>
+    <img src="images/GradPic.jpg" alt="Graduation Picture" >
     
 
     <!-- End of About Section -->
