--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Icon Stylesheet -->
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
+        integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     <!-- Bootstrap Stylesheet -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -47,7 +50,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <!-- Menu items -->
             <div class="navbar-nav ml-auto nav-item dropdown">
-                <a class="nav-item nav-link" href="about_page.html">About</a>
+                <a class="nav-item nav-link" href="#AboutSection">About</a>
                 <a class="nav-item nav-link" href="projects_page.html">Projects</a>
                 <a class="nav-item nav-link" href="contact_page.html">Contact</a>
                 <a class="nav-item nav-link" href="resume_page.html">Résumé</a>
@@ -63,7 +66,7 @@
             <p class="lead">My Tagline My Tagline My Tagline My Tagline</p>
             <hr class="my-4">
             <p class="lead">
-                <a class="btn btn-primary btn-lg" href="#TabViz1" role="button"
+                <a class="btn btn-primary btn-lg" id="AboutSection" href="#AboutSection" role="button"
                     style="padding-top: 20px;padding-bottom: 20px">Welcome<br>&#8595;</a>
             </p>
         </div>
@@ -72,23 +75,66 @@
     <!-- End of Home Section -->
 
     <!-- Make About Section -->
-    <div class="container">
+    <div class="container-fluid">
         <div class="row justify-content-around" style="text-align: center">
-            <div class="col">
-                <img src="images/GradPic.jpg" alt="Graduation Picture" style="height: 200px;border-radius: 4px">
+            <!-- Headshot Image -->
+            <div class="col-md-4 col-lg-3 contentCenter">
+                <img src="images/GradPic.jpg" alt="Graduation Picture" style="border-radius: 4px">
             </div>
-            <div class="col">
+            <!-- About Me [Personal Brand Statement] -->
+            <div class="col-md-8 col-lg-6">
                 <h1 style="text-align: center; color:gray">About Me</h1>
+                <p style="text-align: justify">Hi, I'm Courtney! <br> I am a recent college graduate with a longtime
+                    passion for mathematics and a cultivated love for data science. I recently completed the UC
+                    San Diego Extension Data Science and Visualization Program in July 2019 and am working towards
+                    jumpstarting my career via an entry level data analyst position.
+                    <br>I am a 2018 graduate of UC Santa Barbara with a bachelors degree in Mathematics and a minor in
+                    Math Education. I am detail-oriented, enjoy finding creative solutions to problems, and thrive in
+                    collaborative environments. I have proven skills in team management and I am currently my personal
+                    community's go-to techie, tutor, photographer, and dog-sitter.</p>
             </div>
-            <div class="col">
-                    <h1 style="text-align: center; color:gray">Skills</h1>
-                </div>
+            <!-- Skills Set -->
+            <div class="col-md-8 col-lg-3">
+                <h1 style="text-align: center; color:gray">Skills</h1>
+            </div>
         </div>
     </div>
-    <img src="images/GradPic.jpg" alt="Graduation Picture" >
-    
-
     <!-- End of About Section -->
+
+    <!-- Make Contact Information Section-->
+    <div class="container-fluid" style="background-color: rgb(148, 148, 151,.5);text-align: center">
+        <div class="row justify-content-around">
+            <div class="col">
+                <h1 style="text-align: center; color:gray">Contact Me</h1>
+                <!-- Github -->
+                <i class='fab fa-github-square' style='font-size:36px'></i>
+                <i class='fab fa-linkedin' style='font-size:36px'></i>
+                <!-- LinkedIn -->
+                
+            </div>
+        </div>
+    </div>
+    <!-- End of Contact Information Section -->
+
+
+    <!-- Create Footer -->
+    <footer class="footer">
+        <div class="container-fluid">
+            <!-- Github Link -->
+            <a href="https://github.com/cgainor" target="_blank"><img id="github" alt="Github" src="images/github.png"
+                    style="height:30px;width:30px;"></a>
+            <!-- LinkedIn Link -->
+            <a href="https://www.linkedin.com/in/courtney-gainor/" target="_blank"><img id="linkedin" alt="LinkedIn"
+                    src="images/linkedin.png" style="height:30px;width:30px;"></a>
+            <!-- Email Link -->
+            <a href="mailto:ccgainor@gmail.com" target="_blank"><img id="email" alt="Email" src="images/email.svg"
+                    style="height:30px;width:30px;"></a>
+            <!-- Copyright -->
+            <br>
+            <p style="padding-top: 5px"><small>© Copyright Courtney Gainor 2019</small></p>
+        </div>
+    </footer>
+    <!-- End of Footer -->
 
 </body>
 
