--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <img src="images/GradPic.jpg" alt="Graduation Picture" style="border-radius: 4px">
             </div>
             <!-- About Me [Personal Brand Statement] -->
-            <div class="col-md-8 col-lg-6">
+            <div class="col-md-8 col-lg-5">
                 <h1 style="text-align: center; color:gray">About Me</h1>
                 <p style="text-align: justify">Hi, I'm Courtney! <br> I am a recent college graduate with a longtime
                     passion for mathematics and a cultivated love for data science. I recently completed the UC
@@ -94,24 +94,55 @@
                     community's go-to techie, tutor, photographer, and dog-sitter.</p>
             </div>
             <!-- Skills Set -->
-            <div class="col-md-8 col-lg-3">
+            <div class="col-md-8 col-lg-4">
                 <h1 style="text-align: center; color:gray">Skills</h1>
+                <ul>
+                    <li style="font-weight: bold">Languages: Python(Including Libraries:Pandas,NumPy,SciPy,SQLalchemy,PyMongo and Flask),
+                        R, Matlab</li>
+                    <li><b>Databases:</b> SQL, MySQL, MongoDB</li>
+                    <li><b>Web:</b> HTML/CSS, Bootstrap, JavaScript</li>
+                    <li><b>Visualization:</b> D3.js, Plotly.js, AnyChart.js, Matplotlib,Leaflet.js,Tableau,Gmaps</li>
+                    <li><b>Interfaces:</b> APIs, JSON, Beautiful Soup</li>
+                    <li><b>Spreadsheets:</b> Excel, VBA</li>
+                    <li><b>Others:</b> Github, Heroku, Statistics, Machine Learning Algorithms, Mathematics</li>
+                </ul>
             </div>
         </div>
     </div>
     <!-- End of About Section -->
 
     <!-- Make Contact Information Section-->
-    <div class="container-fluid" style="background-color: rgb(148, 148, 151,.5);text-align: center">
-        <div class="row justify-content-around">
-            <div class="col">
+    <div class="container-fluid"
+        style="background-color: rgb(148, 148, 151,.5);text-align: center;padding-top: 20px;padding-bottom: 0px">
+        <div class="row justify-content-around" style="border-spacing: 0px;vertical-align: middle;">
+            <div class="col-lg-3">
                 <h1 style="text-align: center; color:gray">Contact Me</h1>
-                <!-- Github -->
-                <i class='fab fa-github-square' style='font-size:36px'></i>
-                <i class='fab fa-linkedin' style='font-size:36px'></i>
-                <!-- LinkedIn -->
-                
             </div>
+            <!-- Location -->
+            <div class="col-lg-3">
+                <p><i class='fas fa-map-marker-alt'
+                        style='font-size:24px; padding-right: 8px;vertical-align: middle;'></i>San Diego, CA / Orange
+                    County, CA</p>
+            </div>
+            <!-- Github -->
+            <div class="col-lg-2">
+                <a href="https://github.com/cgainor" target="_blank" style="color: #919aa1"><i
+                        class='fab fa-github-square'
+                        style='font-size:24px;padding-right: 8px;vertical-align: middle;'></i>GitHub</a>
+            </div>
+            <!-- LinkedIn -->
+            <div class="col-lg-2">
+                <a href="https://www.linkedin.com/in/courtney-gainor" target="_blank" style="color: #919aa1"><i
+                        class='fab fa-linkedin'
+                        style='font-size:24px;padding-right: 8px;vertical-align: middle;'></i>LinkedIn</a>
+            </div>
+            <!-- Email -->
+            <div class="col-lg-2">
+                <a href="mailto:ccgainor@gmail.com" target="_blank" style="color: #919aa1"><i
+                        class='fas fa-envelope-square'
+                        style='font-size:24px;padding-right: 8px;vertical-align: middle;'></i>ccgainor@gmail.com</a>
+            </div>
+
         </div>
     </div>
     <!-- End of Contact Information Section -->
