--- a/index.html
+++ b/index.html
@@ -94,17 +94,17 @@
                     community's go-to techie, tutor, photographer, and dog-sitter.</p>
             </div>
             <!-- Skills Set -->
-            <div class="col-md-8 col-lg-4">
+            <div class="col-md-12 col-lg-4">
                 <h1 style="text-align: center; color:gray">Skills</h1>
-                <ul>
-                    <li style="font-weight: bold">Languages: Python(Including Libraries:Pandas,NumPy,SciPy,SQLalchemy,PyMongo and Flask),
-                        R, Matlab</li>
-                    <li><b>Databases:</b> SQL, MySQL, MongoDB</li>
-                    <li><b>Web:</b> HTML/CSS, Bootstrap, JavaScript</li>
-                    <li><b>Visualization:</b> D3.js, Plotly.js, AnyChart.js, Matplotlib,Leaflet.js,Tableau,Gmaps</li>
-                    <li><b>Interfaces:</b> APIs, JSON, Beautiful Soup</li>
-                    <li><b>Spreadsheets:</b> Excel, VBA</li>
-                    <li><b>Others:</b> Github, Heroku, Statistics, Machine Learning Algorithms, Mathematics</li>
+                <ul style="text-align: left">
+                    <li><strong>Languages:</strong> Python 3 (Pandas, NumPy, SciPy, SQLalchemy, PyMongo, and Flask), R
+                    </li>
+                    <li><strong>Databases:</strong> SQL, MySQL, MongoDB, ETL</li>
+                    <li><strong>Front-End Web:</strong> HTML/CSS, Bootstrap, JavaScript</li>
+                    <li><strong>Visualization:</strong> D3.js, Plotly.js, Matplotlib, Leaflet.js, Tableau, MapBox</li>
+                    <li><strong>Interfaces:</strong> APIs, JSON, Beautiful Soup, Web Scraping, Social Media Mining</li>
+                    <li><strong>Spreadsheets:</strong> Excel, Pivot Tables, VBA</li>
+                    <li><strong>Others:</strong> Github, Heroku, Mathematics, Statistics, Machine Learning</li>
                 </ul>
             </div>
         </div>
@@ -115,34 +115,33 @@
     <div class="container-fluid"
         style="background-color: rgb(148, 148, 151,.5);text-align: center;padding-top: 20px;padding-bottom: 0px">
         <div class="row justify-content-around" style="border-spacing: 0px;vertical-align: middle;">
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-3">
                 <h1 style="text-align: center; color:gray">Contact Me</h1>
             </div>
             <!-- Location -->
-            <div class="col-lg-3">
+            <div class="col-lg-3 col-md-4">
                 <p><i class='fas fa-map-marker-alt'
                         style='font-size:24px; padding-right: 8px;vertical-align: middle;'></i>San Diego, CA / Orange
                     County, CA</p>
             </div>
             <!-- Github -->
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2">
                 <a href="https://github.com/cgainor" target="_blank" style="color: #919aa1"><i
                         class='fab fa-github-square'
                         style='font-size:24px;padding-right: 8px;vertical-align: middle;'></i>GitHub</a>
             </div>
             <!-- LinkedIn -->
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2">
                 <a href="https://www.linkedin.com/in/courtney-gainor" target="_blank" style="color: #919aa1"><i
                         class='fab fa-linkedin'
                         style='font-size:24px;padding-right: 8px;vertical-align: middle;'></i>LinkedIn</a>
             </div>
             <!-- Email -->
-            <div class="col-lg-2">
+            <div class="col-lg-2 col-md-2">
                 <a href="mailto:ccgainor@gmail.com" target="_blank" style="color: #919aa1"><i
                         class='fas fa-envelope-square'
                         style='font-size:24px;padding-right: 8px;vertical-align: middle;'></i>ccgainor@gmail.com</a>
             </div>
-
         </div>
     </div>
     <!-- End of Contact Information Section -->
