--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div id="triangle-back">
         <div style="text-align:center" class="jumbotron" style="margin-bottom: 0px">
             <h1 class="display-3">Courtney Gainor</h1>
-            <p class="lead">My Tagline My Tagline My Tagline My Tagline</p>
+            <p class="lead">Data analyst with a Degree in Mathematics from UCSB and a certificate in Data Science and Visualization from UCSD</p>
             <hr class="my-4">
             <p class="lead">
                 <a class="btn btn-primary btn-lg" id="AboutSection" href="#AboutSection" role="button"
