updating page links

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <!-- Menu items -->
             <div class="navbar-nav ml-auto nav-item dropdown">
                 <a class="nav-item nav-link" href="#AboutSection">About</a>
-                <a class="nav-item nav-link" href="projects_page.html">Projects</a>
-                <a class="nav-item nav-link" href="contact_page.html">Contact</a>
-                <a class="nav-item nav-link" href="resume_page.html">Résumé</a>
+                <a class="nav-item nav-link" href="https://github.com/cgainor">Projects</a>
+                <a class="nav-item nav-link" href="#ContactSection">Contact</a>
+                <a class="nav-item nav-link" href="https://www.linkedin.com/in/courtney-gainor">Résumé</a>
             </div>
         </div>
     </nav>
@@ -116,7 +116,7 @@
         style="background-color: rgb(148, 148, 151,.5);text-align: center;padding-top: 20px;padding-bottom: 0px">
         <div class="row justify-content-around" style="border-spacing: 0px;vertical-align: middle;">
             <div class="col-lg-3 col-md-3">
-                <h1 style="text-align: center; color:gray">Contact Me</h1>
+                <h1 style="text-align: center; color:gray" id="ContactSection">Contact Me</h1>
             </div>
             <!-- Location -->
             <div class="col-lg-3 col-md-4">
