--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
             <!-- Menu items -->
             <div class="navbar-nav ml-auto nav-item dropdown">
                 <a class="nav-item nav-link" href="#AboutSection">About</a>
-                <a class="nav-item nav-link" href="https://github.com/cgainor">Projects</a>
+                <a class="nav-item nav-link" href="https://github.com/cgainor" target="_blank">Projects</a>
                 <a class="nav-item nav-link" href="#ContactSection">Contact</a>
-                <a class="nav-item nav-link" href="https://www.linkedin.com/in/courtney-gainor">Résumé</a>
+                <a class="nav-item nav-link" href="https://www.linkedin.com/in/courtney-gainor" target="_blank">Résumé</a>
             </div>
         </div>
     </nav>
