updating bootcamp link in description

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             <div class="col-md-8 col-lg-5">
                 <h1 style="text-align: center; color:gray">About Me</h1>
                 <p style="text-align: justify">Hi, I'm Courtney! <br> I am a recent college graduate with a longtime
-                    passion for mathematics and a cultivated love for data science. I recently completed the (UC
-                    San Diego Extension Data Science and Visualization Program)[https://bootcamp.extension.ucsd.edu/data/] in July 2019 and am working towards
+                    passion for mathematics and a cultivated love for data science. I recently completed the <a href="https://bootcamp.extension.ucsd.edu/data/" target="_blank">UC
+                    San Diego Extension Data Science and Visualization Program</a>  in July 2019 and am working towards
                     jumpstarting my career via an entry level data analyst position.
                     <br>I am a 2018 graduate of UC Santa Barbara with a bachelors degree in Mathematics and a minor in
                     Math Education. I am detail-oriented, enjoy finding creative solutions to problems, and thrive in
